@@ -48,7 +48,6 @@ import jdk.tools.jlink.plugin.PluginException;
 import jdk.tools.jlink.plugin.ResourcePool;
 import jdk.tools.jlink.plugin.ResourcePoolBuilder;
 import jdk.tools.jlink.plugin.ResourcePoolEntry;
-import jdk.tools.jlink.plugin.Plugin;
 import sun.util.cldr.CLDRBaseLocaleDataMetaInfo;
 import sun.util.locale.provider.LocaleProviderAdapter;
 import sun.util.locale.provider.LocaleProviderAdapter.Type;
@@ -76,9 +75,8 @@ import sun.util.locale.provider.ResourceBundleBasedAdapter;
  *     start with at least one white space character, e.g., " ar ar-EG ..."
  *                                                           ^
  */
-public final class IncludeLocalesPlugin implements Plugin, ResourcePrevisitor {
+public final class IncludeLocalesPlugin extends AbstractPlugin implements ResourcePrevisitor {
 
-    public static final String NAME = "include-locales";
     private static final String MODULENAME = "jdk.localedata";
     private static final Set<String> LOCALEDATA_PACKAGES = Set.of(
         "sun.text.resources.cldr.ext",
@@ -147,9 +145,8 @@ public final class IncludeLocalesPlugin implements Plugin, ResourcePrevisitor {
     private static final Locale noNONY = new Locale("no", "NO", "NY");
     private static final Locale thTHTH = new Locale("th", "TH", "TH");
 
-    @Override
-    public String getName() {
-        return NAME;
+    public IncludeLocalesPlugin() {
+        super("include-locales");
     }
 
     @Override
@@ -181,29 +178,19 @@ public final class IncludeLocalesPlugin implements Plugin, ResourcePrevisitor {
     }
 
     @Override
-    public String getDescription() {
-        return PluginsResourceBundle.getDescription(NAME);
-    }
-
-    @Override
     public boolean hasArguments() {
         return true;
     }
 
     @Override
-    public String getArgumentsDescription() {
-       return PluginsResourceBundle.getArgument(NAME);
-    }
-
-    @Override
     public void configure(Map<String, String> config) {
-        userParam = config.get(NAME);
+        userParam = config.get(getName());
 
         try {
             priorityList = Locale.LanguageRange.parse(userParam, EQUIV_MAP);
         } catch (IllegalArgumentException iae) {
             throw new IllegalArgumentException(String.format(
-                PluginsResourceBundle.getMessage(NAME + ".invalidtag"),
+                PluginsResourceBundle.getMessage(getName() + ".invalidtag"),
                     iae.getMessage().replaceFirst("^range=", "")));
         }
     }
@@ -218,7 +205,7 @@ public final class IncludeLocalesPlugin implements Plugin, ResourcePrevisitor {
             ResourcePoolModule module = optMod.get();
             Set<String> packages = module.packages();
             if (!packages.containsAll(LOCALEDATA_PACKAGES)) {
-                throw new PluginException(PluginsResourceBundle.getMessage(NAME + ".missingpackages") +
+                throw new PluginException(PluginsResourceBundle.getMessage(getName()+ ".missingpackages") +
                     LOCALEDATA_PACKAGES.stream()
                         .filter(pn -> !packages.contains(pn))
                         .collect(Collectors.joining(",\n\t")));
@@ -232,24 +219,24 @@ public final class IncludeLocalesPlugin implements Plugin, ResourcePrevisitor {
                 .distinct()
                 .sorted()
                 .map(IncludeLocalesPlugin::tagToLocale)
-                .collect(Collectors.toList());
+                .toList();
         } else {
             // jdk.localedata is not added.
-            throw new PluginException(PluginsResourceBundle.getMessage(NAME + ".localedatanotfound"));
+            throw new PluginException(PluginsResourceBundle.getMessage(getName() + ".localedatanotfound"));
         }
 
         filtered = filterLocales(available);
 
         if (filtered.isEmpty()) {
             throw new PluginException(
-                String.format(PluginsResourceBundle.getMessage(NAME + ".nomatchinglocales"), userParam));
+                String.format(PluginsResourceBundle.getMessage(getName() + ".nomatchinglocales"), userParam));
         }
 
         List<String> value = Stream.concat(
                 META_FILES.stream(),
                 filtered.stream().flatMap(s -> includeLocaleFilePatterns(s).stream()))
             .map(s -> "regex:" + s)
-            .collect(Collectors.toList());
+            .toList();
 
         predicate = ResourceFilter.includeFilter(value);
     }
@@ -279,7 +266,7 @@ public final class IncludeLocalesPlugin implements Plugin, ResourcePrevisitor {
     private List<String> includeLocaleFiles(String localeStr) {
         return INCLUDE_LOCALE_FILES.stream()
             .map(s -> s + localeStr + ".class")
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private boolean stripUnsupportedLocales(byte[] bytes, ClassReader cr) {
@@ -312,7 +299,7 @@ public final class IncludeLocalesPlugin implements Plugin, ResourcePrevisitor {
             locales = originalTags.stream()
                 .filter(tag -> !tag.isEmpty())
                 .map(IncludeLocalesPlugin::tagToLocale)
-                .collect(Collectors.toList());
+                .toList();
         } catch (IllformedLocaleException ile) {
             // Seems not an available locales string literal.
             return false;
@@ -355,7 +342,7 @@ public final class IncludeLocalesPlugin implements Plugin, ResourcePrevisitor {
                 .flatMap(Optional::stream)
                 .flatMap(IncludeLocalesPlugin::localeToTags)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
         return ret;
     }
