@@ -32,6 +32,9 @@ import java.util.spi.ToolProvider;
  * @bug 8241602
  * @modules jdk.jlink
  *          java.se
+ *          jdk.management
+ *          jdk.unsupported
+ *          jdk.charsets
  * @run main JLinkReproducible2Test
  */
 public class JLinkReproducible2Test {
@@ -48,7 +51,17 @@ public class JLinkReproducible2Test {
         JLINK_TOOL.run(System.out, System.err, "--add-modules", "java.se", "--output", image2.toString());
 
         if (Files.mismatch(image1.resolve("lib").resolve("modules"), image2.resolve("lib").resolve("modules")) != -1L) {
-            new RuntimeException("jlink producing inconsistent result");
+            throw new RuntimeException("jlink producing inconsistent result");
+        }
+
+        Path image3 = Paths.get("./image3");
+        Path image4 = Paths.get("./image4");
+
+        JLINK_TOOL.run(System.out, System.err, "--add-modules", "java.base,jdk.management,jdk.unsupported,jdk.charsets", "--output", image3.toString());
+        JLINK_TOOL.run(System.out, System.err, "--add-modules", "java.base,jdk.management,jdk.unsupported,jdk.charsets", "--output", image4.toString());
+
+        if (Files.mismatch(image3.resolve("lib").resolve("modules"), image4.resolve("lib").resolve("modules")) != -1L) {
+            throw new RuntimeException("jlink producing inconsistent result with multiple named modules");
         }
     }
 }
