@@ -23,9 +23,6 @@
 
 // key: compiler.err.invalid.accessor.method.in.record
 // key: compiler.misc.method.must.be.public
-// key: compiler.note.preview.filename
-// key: compiler.note.preview.recompile
-// options: --enable-preview -source ${jdk.version}
 
 record R(int x) {
     private int x() { return x; }
